--- a/docs/esterni/manuali/manuale_acquirente.tex
+++ b/docs/esterni/manuali/manuale_acquirente.tex
@@ -7,11 +7,11 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{placeins}
-\settitolo{Manuale Utente Shop Chain}
+\settitolo{Manuale Acquirente Shop Chain}
 \setredattori{WinningSoftwareSolution}
 \setdestuso{esterno}
 \setdescrizione{
-Manuale utente.
+Manuale acquirente.
 }
 
 \begin{document}
@@ -21,16 +21,16 @@ Manuale utente.
 \newpage
 
 \section{Introduzione}
-Attraverso l'utilizzo della blockchain \textit{Polygon}, Shop Chain fornisce un sistema decentralizzato per il pagamento di prodotti in MATIC. Utilizzando Shop Chain è possibile effettuare una qualsiasi attività di compravendita in maniera sicura per entrambi gli attori dello scambio. L'acquirente che desidera acquistare un prodotto da un venditore in un e-commerce potrà effettuare il suo pagamento in MATIC, ovvero il token nativo della blockchain \textit{Polygon}. Il venditore non può disporre immediatamente del saldo ricevuto poiché sarà bloccato fino alla ricezione del pacco, momento nel quale l'acquirente può sbloccare i fondi attraverso la scannerizzazione di un codice QR presente sulla scatola.
+Attraverso l'utilizzo della blockchain \textit{Polygon}, Shop Chain fornisce un sistema decentralizzato per il pagamento di prodotti in MATIC. Utilizzando Shop Chain è possibile effettuare una qualsiasi attività di compravendita in maniera sicura per entrambi gli attori dello scambio. L'acquirente che desidera acquistare un prodotto da un venditore in un e-commerce potrà effettuare il suo pagamento in MATIC, ovvero il token nativo della blockchain \textit{Polygon}. Il venditore non può disporre immediatamente del saldo ricevuto poiché sarà bloccato fino alla ricezione del pacco, momento nel quale l'acquirente può sbloccare i fondi attraverso la scannerizzazione di un codice QR presente sulla scatola.\\
 Il presente documento ha la funzione di descrivere in dettaglio la procedura da seguire per l'acquirente per il corretto acquisto di un item e sucessivo ritiro e sblocco fondi attraverso il servizio Shop Chain.
 
 
-\section{Pagamento}
+\section{Configurazione wallet}
 \subsection{Wallet Metamask}
-Per poter effettuare il pagamento sarà necessario utilizzare un wallet Metamask. Visitare \href{https://www.metamask.io}{metamask.io} per maggiori informazioni.
+Per poter effettuare il pagamento sarà necessario l'utilizzo di un wallet Metamask. Visitare \href{https://www.metamask.io}{metamask.io} per maggiori informazioni.
 \subsubsection{Configurazione}
-Se il network \textit{Polygon} non è gia stato inserito nel proprio wallet Metamask, procedere con la lettura del seguente paragrafo.
-Per l'inserimento e la configurazione del network \textit{Polygon} nel proprio wallet Metamask è necessario utilizzare i seguenti dati:
+Se il network Polygon non è gia stato inserito nel proprio wallet Metamask, procedere con la lettura del seguente paragrafo.
+Per l'inserimento e la configurazione del network Polygon nel proprio wallet Metamask è necessario utilizzare i seguenti dati:
 \begin{itemize}
 \item Network Name: \textbf{Matic Mainnet};
 \item New RPC Url: \textbf{https://rpc-mainnet.maticvigil.com/};
@@ -40,7 +40,7 @@ Per l'inserimento e la configurazione del network \textit{Polygon} nel proprio w
 \end{itemize}
 Una volta inseriti i dati e aggiunto il network, selezionare il network prima di procedere con il pagamento.
 
-\subsubsection{Collegamento del wallet a Shop Chain}
+\subsubsection{Collegamento a Shop Chain}
 Per poter eseguire il pagamento è necessario collegare il proprio wallet Metamask a Shop Chain. Una volta reindirizzati sulla landing page di Shop Chain, se non si ha già collegato in precedenza il proprio wallet:
 \begin {itemize}
 \item selezionare "Connect Wallet" all'apertura del pop-up (Fig. 1);
@@ -48,15 +48,16 @@ Per poter eseguire il pagamento è necessario collegare il proprio wallet Metama
 \end{itemize}
 
 \FloatBarrier
-\begin{figure}
+\begin{figure}[!h]
 \centering
 \includegraphics[width=0.5\linewidth]{img/connessione_wallet.png}
-\caption{Interfaccia per la connessione del wallet Metamask.}
+\caption{Connessione del wallet Metamask a Shop Chain.}
 \end{figure}
 \FloatBarrier
 
-\subsection{Pagamento in MATIC}
-Per effettuare il pagamento sarà necessario detenere nel proprio wallet Metamask l'equivalente in MATIC del prezzo in dollari dell'item che si vuole acquistare. MATIC è la cryptovaluta nativa della blockchain Polygon con la quale è possibile pagare con Shop Chain. É possibile scambiare le proprie cryptovalute sul network Polygon attraverso uno dei seguenti exchange decentralizzati:
+\section{Acquisto di un prodotto}
+Per effettuare il pagamento sarà necessario detenere nel proprio wallet Metamask l'equivalente in MATIC del prezzo in dollari dell'item che si vuole acquistare. MATIC è la cryptovaluta nativa della blockchain Polygon con la quale è possibile pagare con Shop Chain.
+\\É possibile scambiare le proprie cryptovalute sul network Polygon attraverso uno dei seguenti exchange decentralizzati:
 
 \begin{itemize}
 \item \href{https://www.quickswap.exchange}{QuickSwap};
@@ -69,20 +70,27 @@ Una volta verificato di possedere una sufficiente quantità di MATIC si può pro
 \item confermare la transazione su Metamask.
 \end{itemize}
 
-Dovrà essere pagata anche un piccola somma per coprire i costi di transazione sul network \textit{Polygon}; questa sarà visualizzabile direttamente da Metamask durante la conferma della transazione.
-
+Dovrà essere pagata anche un piccola somma per coprire i costi di transazione sul network \textit{Polygon}; questa è visualizzabile direttamente da Metamask prima di confermare la transazione.
 \FloatBarrier
-\begin{figure}
+\begin{figure}[!h]
 \centering
 \includegraphics[width=0.5\linewidth]{img/oggetto_in_vendita.png}
-\caption{Interfaccia per il pagamento dell'item.}
+\caption{Acquisto di un prodotto.}
+\end{figure}
+\FloatBarrier
+Inoltre attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 3) sarà possibile visualizzare l'insieme di pagamenti effettuati con Shop Chain attraverso il wallet collegato.
+\FloatBarrier
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.8\linewidth]{img/visualizzazione_ordini.png}
+\caption{Sezione Outgoing per visualizzazione pagamenti.}
 \end{figure}
 \FloatBarrier
 
 \subsection{Visualizzazione acquisti}
-Attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 3) sarà possibile visualizzare l'insieme di pagamenti effettuati con ShopChain attraverso il wallet collegato.
-É possibile selezionare un acquisto per visualizzare i seguenti dati:
+É possibile selezionare un acquisto per visualizzare i seguenti dati (Fig. 4 riquadro 1):
 \begin{itemize}
+\item \textbf{Price}: indica il prezzo dell'oggetto acquistato;
 \item \textbf{From}: indica l'address del wallet dal quale è stato eseguito il pagamento;
 \item \textbf{To}: indica l'address del wallet del venditore;
 \item \textbf{Opened}: indica la data in cui è stato eseguito l'acquisto;
@@ -91,21 +99,23 @@ Attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 3) sarà
   \begin{itemize}
     \item \textbf{Open}: l'ordine è ancora aperto e in attesa di conferma;
     \item \textbf{Confirmed}: l'ordine è già stato confermato attraverso la scannerizzazione del codice QR;
-    \item \textbf{Expired}: l'ordine è scaduto poiché sono passati 14 giorni senza che sia stato confermato manualmente dall'acquirente;
-    \item \textbf{Canceled}: l'ordine è stato rifiutato e dunque cancellato dall'ecommerce e non è più valido. I fondi utilizzati per il pagamento vengono restituiti all'acquirente nella valuta stabile DAI.
+    \item \textbf{Expired}: l'utente ha chiesto il rimborso poiché non ha ricevuto il pacco entro 14 giorni;
+    \item \textbf{Canceled}: l'ordine è stato rifiutato dall'e-commerce. I fondi utilizzati per il pagamento vengono restituiti all'acquirente nella valuta stabile DAI.
   \end{itemize}
 \end{itemize}
-
+\subsection{Gestione acquisti}
+Per ciascun acquisto l'acquirente ha 14 giorni per annullare il pagamento e dunque essere rimborsato con la valuta stabile DAI. Nel caso l'utente voglia annullare il pagamento dovrà selezionare l'opzione "Refund transaction" (Fig. 4 riquadro 2) e dunque ricevere il rimborso.
+\end{itemize}
 \FloatBarrier
-\begin{figure}
+\begin{figure}[!h]
 \centering
-\includegraphics[width=0.7\linewidth]{img/visualizzazione_ordini.png}
-\caption{Funzione Outgoing per visualizzazione pagamenti.}
+\includegraphics[width=0.8\linewidth]{img/transazione_acquirente.png}
+\caption{Visualizzazione e gestione acquisti.}
 \end{figure}
 \FloatBarrier
-
 \section{Sblocco dei fondi}
-Per tutelare l'acquirente, i MATIC utilizzati per il pagamento sono bloccati e il venditore non può utilizzarli fino al momento della ricezione del pacco o dopo 14 giorni dall'acquisto. Al momento della consegna l'acquirente deve sbloccare i fondi. I seguenti paragrafi descrivono la procedura da seguire per concludere l'acquisto e sbloccare correttamente i fondi.
+Per tutelare l'acquirente, i MATIC utilizzati per il pagamento sono bloccati e il venditore non può utilizzarli fino al momento della ricezione del pacco. Al momento della consegna l'acquirente deve sbloccare i fondi.\\
+I seguenti paragrafi descrivono la procedura da seguire per concludere l'acquisto e sbloccare correttamente i fondi.
 \subsection{Scannerizzazione codice QR}
 Il venditore al momento della spedizione attacca sulla scatola un codice QR. L'acquirente, dopo il ritiro del pacco, deve procedere con la scannerizzazione di questo codice QR per poter raggiungere la pagina di sblocco dei fondi. La scannerizzazione può essere eseguita dal proprio smartphone in due modi:
 \begin{itemize}
@@ -126,16 +136,15 @@ Una volta reindirizzati sulla landing page per la conferma dell'acquisto è poss
 \item selezionare "Confirm" (Fig. 4);
 \item confermare la transazione di conferma su Metamask.
 \end{itemize}
-
 \FloatBarrier
-\begin{figure}
+\begin{figure}[!h]
 \centering
 \includegraphics[width=0.5\linewidth]{img/conferma_ordine.png}
 \caption{Interfaccia per la conferma dell'ordine.}
 \end{figure}
 \FloatBarrier
-Terminata la procedura i fondi saranno resi disponibili al venditore e il processo di vendita si è concluso correttamente.
-Grazie per aver utilizzato Shop Chain!
+Terminata la procedura i fondi saranno resi disponibili al venditore, lo stato dell'ordine diventa "Confirmed" e dunque il processo di vendita si è concluso correttamente.
+\\Grazie per aver utilizzato Shop Chain!
 
 
 
