--- a/docs/esterni/manuali/manuale_acquirente.tex
+++ b/docs/esterni/manuali/manuale_acquirente.tex
@@ -94,7 +94,7 @@ Inoltre attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 
 \item \textbf{From}: indica l'address del wallet dal quale è stato eseguito il pagamento;
 \item \textbf{To}: indica l'address del wallet del venditore;
 \item \textbf{Opened}: indica la data in cui è stato eseguito l'acquisto;
-\item \textbf{Expired}: indica la data in cui scade l'ordine e in cui i fondi vengono automaticamente sbloccati; si tratta di 14 giorni dopo l'acquisto.
+\item \textbf{Expired}: indica la data in cui scade l'ordine e in cui i fondi vengono automaticamente sbloccati, si tratta di 14 giorni dopo l'acquisto.
 \item \textbf{Stato dell'ordine}:
   \begin{itemize}
     \item \textbf{Open}: l'ordine è ancora aperto e in attesa di conferma;
